objects/nFUSE__Credit_Report__c.object
<CustomObject>
    <description>Credit report pull information</description>
    <fields>
        <fullName>nFUSE__Account_Payment_Index__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Account payment index</description>
        <label>Account Payment Index</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Account__c</fullName>
        <description>The Relationship associated with the credit report.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Credit_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>nFUSE__Address_Discrepency__c</fullName>
        <description>This field populates with alternate address information from the credit bureau if an address discrepancy is found.</description>
        <label>Address Discrepancy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Alert_Code__c</fullName>
        <description>This field contains an alert code assigned by the credit bureau; see credit bureau documentation for a description of the code.</description>
        <label>Alert Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Alert_Message__c</fullName>
        <description>This field contains an alert message from the credit bureau.</description>
        <label>Alert Message</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFUSE__AlertedMessage__c</fullName>
        <description>--DEPRECATED-- Alert_Message__c AlertedMessage</description>
        <label>D-AlertedMessage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>nFUSE__App_Plugin__c</fullName>
        <description>This field contains the name of the application plugin used to generate the credit report.</description>
        <label>App Plugin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Available_Credit__c</fullName>
        <description>This field contains the usage amount of credit available to the entity.</description>
        <label>Available Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__Average_Open_Balance__c</fullName>
        <description>Contains the average open dollar balance for this entity.</description>
        <label>Average Open Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__Bankruptcy_Amount__c</fullName>
        <description>This field contains the total dollar amount of bankruptcies related to the entity.</description>
        <label>Dollar amount of Bankruptcy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__Bankruptcy_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The presence of a positive value in this field indicates a known bankruptcy event related to the entity.</description>
        <label>Bankruptcy Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__Business_Delinquency_Financial_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Business delinquency financial score</description>
        <label>Business Delinquency Financial Score</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Business_Delinquency_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Business delinquency score</description>
        <label>Business Delinquency Score</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Business_Failure_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Business failure score</description>
        <label>Business Failure Score</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Charge_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this optional checkbox to indicate any charge off activity. By default, this field is deselected.</description>
        <inlineHelpText>This field signifies if a record contains charge off activity.</inlineHelpText>
        <label>Charge-off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__Collection_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field contains information related to any known collection events related to the entity.</description>
        <label>Collection Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__Confidence_Level_Indicator__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Confidence level indicator</description>
        <label>Confidence Level Indicator</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact associated with the credit report.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Credit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFUSE__Credit_Active_Since__c</fullName>
        <description>The date that the credit became active is optionally stored in thie field.</description>
        <label>Credit Active Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nFUSE__Credit_Report_Freeze__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox field to indicate an applicant&apos;s credit report is frozen or locked. By default, this field is deselected.</description>
        <inlineHelpText>If selected, this field indicates that an applicant&apos;s credit report is frozen or locked.</inlineHelpText>
        <label>Credit Report Freeze</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__Credit_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field contains the credit score reported by the credit bureau for this entity.</description>
        <label>Credit Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__EFX_ID__c</fullName>
        <description>This field contains a unique identifier assigned by the credit bureau to the credit report.</description>
        <label>EFX ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__FICO_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>--DEPRECATED-- Credit_Score__c The FICO Score</description>
        <label>D-FICO Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Foreclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this optional checkbox field to indicate that the record contains foreclosure activity. By default, this field is deselected.</description>
        <inlineHelpText>This checkbox signifies if a record indicates foreclosure activity.</inlineHelpText>
        <label>Foreclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__Fraud_Alert__c</fullName>
        <description>This field contains details regarding any identification or fraud issues found.</description>
        <label>ID Verification/Fraud Alert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Industry_Payment_Index__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Industry payment index</description>
        <label>Industry Payment Index</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Judgements_Amount_Satisfied__c</fullName>
        <description>This field contains the total dollar amount  of judgements satisfied on account.</description>
        <label>Dollar amount of judgements satisfied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__Judgements_Amount__c</fullName>
        <description>This field contains the total dollar amount of judgements related to the entity.</description>
        <label>Dollar amount of Judgements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__Last_Run_Date__c</fullName>
        <description>This field contains the most recent previous credit report run date.</description>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFUSE__Legal_Actions_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Legal actions indicator</description>
        <label>Legal Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__Liens_Amount_Satisfied__c</fullName>
        <description>Dollar amount of liens satisfied on account.</description>
        <label>Dollar amount of Liens Satisfied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__Liens_Amount__c</fullName>
        <description>This field contains the total dollar amount of all known liens attributable to the entity.</description>
        <label>Dollar amount of Liens</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__MLA_Status_Covered_Borrower__c</fullName>
        <description>The system automatically selects a value from this picklist field to indicate an applicant&apos;s Military Lending Act covered borrower status. By default, this field is null.</description>
        <inlineHelpText>This field indicates an applicant&apos;s Military Lending Act status.</inlineHelpText>
        <label>MLA Status Covered Borrower</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match</fullName>
                </value>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Insufficient Data for Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFUSE__Match_Quality_Indicator__c</fullName>
        <description>Match quality indicator</description>
        <label>Match Quality Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Median_Balance__c</fullName>
        <description>Contains the median dollar balance across all balances for this entity.</description>
        <label>Median Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__Most_Severe_Status_24Months__c</fullName>
        <description>The most severe credit status in the past 24 months for this entity.</description>
        <label>MostSevereStatus24Months</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__No_Hit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox field to indicate that the vendor database was not able to retrieve credit bureau information for an applicant. By default, this field is deselected.</description>
        <inlineHelpText>This field indicates if the vendor database retrieved an applicant&apos;s Credit Bureau information successfully.</inlineHelpText>
        <label>No Hit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__Number_Of_Accounts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field contains the total number of known accounts for this entity.</description>
        <label>Number of accounts</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Number_Of_Bankruptcies__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field contains the total number of bankruptcies for this entity.</description>
        <label>Number of Bankruptcies</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Number_Of_Charge_Offs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field contains the number of charge offs across all credit lines for this entity.</description>
        <label>Number of Charge Offs</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Number_Of_Judgements_Satisfied__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field contains the total number of judgements satisfied on account.</description>
        <label>Number of Judgements Satisfied</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Number_Of_Judgements__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If the number of judgements is known, this field will contain the number of judgements against the entity.</description>
        <label>Number of Judgements</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Number_Of_Liens_Satisfied__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of liens satisfied on account.</description>
        <label>Number of Liens Satisfied</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Number_Of_Liens__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field contains a count of all known liens attributable to the entity.</description>
        <label>Number of Liens</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__OFAC_Alert_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A positive value in this field indicates the known presence of an OFAC match for the provided Relationship</description>
        <label>OFAC Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__Open_Tradelines__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The system automatically populates this number field to count the number of open tradelines. By default, this field is 0.</description>
        <inlineHelpText>This field displays the total number of open tradelines.</inlineHelpText>
        <label>Open Tradelines</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Recent_Bankruptcy_Filing_Date__c</fullName>
        <description>If a recent bankruptcy filing is known, this field will contain the date of the filing.</description>
        <label>Bankruptcy Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nFUSE__Recent_Judgements_Filing_Date__c</fullName>
        <description>This field contains the filing date of the most recent judgement filing, if applicable.</description>
        <label>Judgements Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nFUSE__Recent_Liens_Filing_Date__c</fullName>
        <description>This field contains the filing date of the most recent liens filing, if applicable.</description>
        <label>Liens Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nFUSE__Report_Category__c</fullName>
        <description>This field identifies the credit report category of the credit report.</description>
        <label>Report Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFUSE__Report_Type__c</fullName>
        <description>This field contains the credit report pull type for the credit pull.</description>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CreditHardPull</fullName>
                </value>
                <value>
                    <fullName>CreditSoftPull</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFUSE__Repossession__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this optional checkbox field to indicate if the record contains information that concerns repossession on a tradeline. By default, this field is deselected.</description>
        <inlineHelpText>This field signifies if a record contains an indication of repossession on a tradeline.</inlineHelpText>
        <label>Repossession</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__Status__c</fullName>
        <description>This field contains the status of the credit report request.</description>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Tax_Lien_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A positive value in this field indicates the known presence of a tax lien against the entity.</description>
        <label>Tax Lien Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__Total_Credit_Limit__c</fullName>
        <description>This field contains the total credit limit across all current credit lines owned by this entity.</description>
        <label>Total Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__Total_Exposure__c</fullName>
        <description>This field contains the dollar aount of the total current credit exposure attributed to this entity.</description>
        <label>Total Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__Total_Past_Due__c</fullName>
        <description>The total past due across all reported credit lines for this entity.</description>
        <label>Total Past Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFUSE__Transaction_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transaction log record associated with credit report.</description>
        <label>Transaction Log</label>
        <referenceTo>nFUSE__Transaction_Log__c</referenceTo>
        <relationshipLabel>Credit Reports</relationshipLabel>
        <relationshipName>Credit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Credit Report</label>
    <listViews>
        <fullName>all</fullName>
        <columns>NAME</columns>
        <columns>nFUSE__Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
    </listViews>
    <nameField>
        <label>Credit Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>